fix spacing

--- a/scss/pages/_sponsor.scss
+++ b/scss/pages/_sponsor.scss
@@ -1,6 +1,6 @@
 .page-slug-sponsors {
-  padding: 0;
   & .sponsor__block {
+    padding: 0;
     .wordcamp-sponsors__featured-image {
       max-width: 300px;
       width: 100%;
@@ -25,6 +25,7 @@
       text-decoration: none;
       color: #000;
       padding-left: 30px;
+      position: relative;
       &::after {
         content: "";
         width: 4px;
